# crustos

./: .gitignore  Cargo.toml  Makefile  bochsrc.txt  build.rs  link.ld  runner.sh  x86_64-crustos.json
.cargo/: config.toml
iso/boot/grub/: grub.cfg
src/: boot.asm  main.rs  multiboot.rs  serial.rs  uart_16550.rs  vga.rs
src/arch/x64/: Cargo.toml
src/arch/x64/src/: idt.rs  lib.rs  pic.rs  ports.rs
src/arch/x86_64/: gdt.rs  io.rs  mod.rs  serial.rs
src/arch/x86_64/asm/: interrupts.rs  segments.rs
