[package]
name = "crustos"
version = "0.1.0"
edition = "2021"

test-success-exit-code = 33

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

members = [
    "arch/*"
]

[dependencies]
bitflags = "1.3.2"
spin = "0.9.3"
x64 = { path = "src/arch/x64" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]